--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,18 @@ letter-spacing: 0.03em;
 color: #000000;
 
 }
+.studiologo-foot {
+    font-family: Raleway;
+font-style: normal;
+font-weight: bold;
+font-size: 26px;
+line-height: 31px;
+/* identical to box height */
+
+letter-spacing: 0.03em;
+
+color: #FFFFFF;
+}
 .web {
     color: #2196F3; 
 }
@@ -59,3 +71,37 @@ color: #212121;
     background: #2196F3;
     color: #ffffff;
 }
+.footer {
+    position: absolute;
+width: 1600px;
+height: 252px;
+left: 0px;
+
+background: #2F303A
+}
+.contact-footer a {
+    font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;
+
+color: rgba(255, 255, 255, 0.6);
+
+}
+.adress a {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    
+    letter-spacing: 0.03em;
+    
+    color: #FFFFFF;
+}
+
