--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,18 @@ font-family: 'Roboto', sans-serif;
 a {
     text-decoration: none;
 }
+
+ul {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+/* header */
 .navigation a {
-/* font-family: 'Roboto', sans-serif; */
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.2;
 letter-spacing: 0.02em;
 
 color: #212121;
@@ -23,7 +29,7 @@ color: #212121;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 31px;
+line-height: 1.2;
 letter-spacing: 0.03em;
 color: #000000;
 
@@ -33,11 +39,8 @@ color: #000000;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 31px;
-/* identical to box height */
-
+line-height: 1.2;
 letter-spacing: 0.03em;
-
 color: #FFFFFF;
 }
 .web {
@@ -47,13 +50,86 @@ color: #FFFFFF;
     font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.2;
 letter-spacing: 0.02em;
 
 color: #757575;
 
 }
+.top-contact a:hover {
+    color: #2196F3;
+}
+/* index main */
+.baner {
+width: 1600px;
+height: 600px;
+background: #2F303A;
+}
+.title {
+    width: 696px;
+height: 120px;
+left: 452px;
+top: 280px;
+position: absolute;
+    font-weight: 900;
+font-size: 44px;
+line-height: 1.4;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+color: #FFFFFF;
+}
+.zakaz {
+position: absolute;
+width: 200px;
+height: 50px;
+left: 700px;
+top: 430px;
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.9;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+}
+.zakaz:hover {
+    background: #188CE8;
 
+}
+.zanytie, .komanda {
+    font-weight: 700;
+font-size: 36px;
+line-height: 1,2;
+text-align: center;
+letter-spacing: 0.03em;
+
+color: #212121;
+}
+.team h3 {
+    font-weight: 500;
+font-size: 16px;
+line-height: 1,2;
+/* identical to box height */
+
+letter-spacing: 0.03em;
+
+color: #212121;
+}
+.team p {
+    font-weight: 400;
+font-size: 16px;
+line-height: 1,2;
+/* identical to box height */
+
+letter-spacing: 0.03em;
+
+color: #757575;
+}
+
+/* portfolio */
 .menu_button {
 width: 128px;
 height: 38px;
@@ -62,7 +138,7 @@ border-radius: 4px;
 
 font-weight: 500;
 font-size: 16px;
-line-height: 26px;
+line-height: 1.6;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
@@ -71,12 +147,27 @@ color: #212121;
     background: #2196F3;
     color: #ffffff;
 }
+.menu-img h3 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    
+    color: #212121;
+}
+.menu-img p {
+    font-weight: 400;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.03em;
+color: #757575;
+}
+/* footer */
 .footer {
     position: absolute;
 width: 1600px;
 height: 252px;
 left: 0px;
-
 background: #2F303A
 }
 .contact-footer a {
@@ -84,11 +175,8 @@ background: #2F303A
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
-line-height: 24px;
-/* or 171% */
-
+line-height: 1.7;
 letter-spacing: 0.03em;
-
 color: rgba(255, 255, 255, 0.6);
 
 }
@@ -97,11 +185,8 @@ color: rgba(255, 255, 255, 0.6);
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
-    /* or 171% */
-    
+    line-height: 1.7;
     letter-spacing: 0.03em;
-    
     color: #FFFFFF;
 }
 
